# ChangeLog for sys-kernel/genkernel
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.64 2005/01/26 22:11:37 plasmaroo Exp $

*genkernel-3.1.0f (26 Jan 2005)

  26 Jan 2005; <plasmaroo@gentoo.org> -genkernel-3.1.0e.ebuild,
  +genkernel-3.1.0f.ebuild:
  Version bump; bug #79502.

*genkernel-3.1.0e (22 Jan 2005)

  22 Jan 2005; <plasmaroo@gentoo.org> -genkernel-3.1.0d.ebuild,
  +genkernel-3.1.0e.ebuild:
  Version bump. Closes bugs #73356, #74758, #77277, #77363, #78636.

*genkernel-3.1.0d (21 Dec 2004)

  21 Dec 2004; <plasmaroo@gentoo.org> +genkernel-3.1.0d.ebuild:
  Version bump. Closes bugs #73112, #70193 and #73054.

*genkernel-3.1.0c (30 Nov 2004)

  30 Nov 2004; <plasmaroo@gentoo.org> +genkernel-3.1.0c.ebuild:
  Version bump. Closes bugs #61827, #64864, #66198, #67246, #69745, #70193,
  #72129, #72253, #72342, #72510.

*genkernel-3.1.0b (23 Oct 2004)

  23 Oct 2004; <plasmaroo@gentoo.org> -genkernel-3.1.0.ebuild,
  +genkernel-3.1.0a.ebuild, +genkernel-3.1.0b.ebuild:
  Version bump - fixes udev keymap issues and bug #68518.

  22 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  genkernel-3.1.0.ebuild:
  Added missing ppc64 KEYWORD.

*genkernel-3.1.0 (21 Oct 2004)

  21 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +genkernel-3.1.0.ebuild:
  Finally adding 3.1.0 to cvs.  Blame plasmaroo.

*genkernel-3.0.2c-r1 (02 Oct 2004)

  02 Oct 2004; Travis Tilley <lv@gentoo.org> +genkernel-3.0.2c-r1.ebuild:
  updated the x86_64 kernel configs for the latest amd64 stable genkernel

*genkernel-3.0.2g (19 Sep 2004)

  19 Sep 2004; <plasmaroo@gentoo.org> -genkernel-3.0.2f.ebuild,
  +genkernel-3.0.2g.ebuild:
  Version bump - closes bugs #57576, #58360, #60862 and #62365.

*genkernel-3.1.0 (21 Oct 2004)

  21 Oct 2004; Chris Gianelloni <wolf31o2@gentoo.org>
  +genkernel-3.1.0.ebuild:
  Finally adding 3.1.0 to cvs.  Blame plasmaroo.
