@@ -1,2 +1,0 @@
-MD5 719e54c521859d1c1b546153ffc074ce genkernel-3.0.2c.tar.bz2 2128887
-MD5 7ffe6e1740d1d3d311b53b75a9ff48d9 genkernel-updated-x86_64-configs.tar.bz2 15519
