@@ -1,30 +1,0 @@
-# Copyright 1999-2004 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/Attic/genkernel-3.0.2d.ebuild,v 1.3 2004/07/28 12:17:35 plasmaroo Exp $
-
-IUSE="bootsplash"
-
-DESCRIPTION="Gentoo autokernel script"
-HOMEPAGE="http://www.gentoo.org"
-SRC_URI="http://dev.gentoo.org/~plasmaroo/patches/kernel/genkernel/3.0.2/${P}.tar.bz2"
-
-SLOT="0"
-LICENSE="GPL-2"
-KEYWORDS="hppa ppc64"
-
-DEPEND="x86? ( bootsplash? ( media-gfx/bootsplash ) )
-	amd64? ( bootsplash? ( media-gfx/bootsplash ) )"
-
-src_install() {
-	dodir /etc
-	cp ${S}/genkernel.conf ${D}/etc
-
-	dodir /usr/share/genkernel
-	cp -Rp ${S}/* ${D}/usr/share/genkernel
-
-	dodir /usr/bin
-	dosym /usr/share/genkernel/genkernel /usr/bin/genkernel
-
-	rm ${D}/usr/share/genkernel/genkernel.conf
-	dodoc README
-}
