@@ -1,6 +1,16 @@
 # ChangeLog for sys-kernel/genkernel
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.64 2005/01/26 22:11:37 plasmaroo Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/genkernel/ChangeLog,v 1.65 2005/01/27 19:46:01 plasmaroo Exp $
+
+*genkernel-3.1.0g (27 Jan 2005)
+
+  27 Jan 2005; <plasmaroo@gentoo.org> -genkernel-3.0.2a.ebuild,
+  -genkernel-3.0.2b.ebuild, -genkernel-3.0.2c-r1.ebuild,
+  -genkernel-3.0.2c.ebuild, -genkernel-3.0.2d.ebuild,
+  -genkernel-3.0.2g.ebuild, -genkernel-3.1.0a.ebuild,
+  -genkernel-3.1.0b.ebuild, -genkernel-3.1.0f.ebuild,
+  +genkernel-3.1.0g.ebuild:
+  Version bump; fix bug #79755. Remove ebuilds for old versions.
 
 *genkernel-3.1.0f (26 Jan 2005)
 
